Updated meta information to make it SEO friendly

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+       <meta name="description" content="Croissants are delicious baked goods from Austria. Contact croissant.com for more information or
+       to order croissant pastries">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-   <title>Document</title>
+   <title>Contact Croissant.com</title>
 </head>
 <body>
     <h1>🥐 Contact us</h1>
