--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+   <meta name="description" content="A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin, named for its historical crescent shape. 
+        Croissants and other viennoiserie are made of a layered yeast-leavened dough">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Croissant</title>
+    <title>Croissant information/croissant.com</title>
 </head>
 <body>
     <h1>🥐 Croissant</h1>
