--- a/photo.html
+++ b/photo.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Photo of a croissant, please contact croissant.com to order a pastry or for more information">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/styles.css">
     
-    <title>Photo</title>
+    <title>Croissant photo/croissant.com</title>
 </head>
 <body>
     <H1>🥐 A picture of a croissant</H1>
@@ -14,8 +15,8 @@
 
            <footer>
     <a href="/index.html">Homepage</a>
-        <a href="/photo.html">Photo</a>
-            <a href="/contact.html">Contact</a>
+        <a href="/photo.html">Croissant photo</a>
+            <a href="/contact.html">contact information</a>
             </footer>
 </body>
 </body>
