--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <p>To contact croissant.com please email us at <a href="mailto:hello@croissant.com" title="contact us by email">hello@croissant.com</a>
     for more info </p>
                <footer>
-    <a href="/">Homepage</a>
+    <a href="/"title="Croissant information">Homepage</a>
         <a href="/photo.html" title="Croissant photo">Photo</a>
             <a href="/contact.html" title="Contact Croissant.com">Contact</a>
             </footer>
