--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <footer>
     <p>A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin, named for its historical crescent shape. 
         Croissants and other viennoiserie are made of a layered yeast-leavened dough</p>
-           <footer>
-    <a href="/index.html">Homepage</a>
-        <a href="/photo.html">Photo</a>
-            <a href="/contact.html">Contact</a>
+               <footer>
+    <a href="/"title="Croissant information">Homepage</a>
+        <a href="/photo.html" title="Croissant photo">Photo</a>
+            <a href="/contact.html" title="Contact Croissant.com">Contact</a>
             </footer>
 </body>
 </html>
