Changed meta info based on solution
updated titles and wording

--- a/photo.html
+++ b/photo.html
@@ -8,9 +8,10 @@
         <link rel="stylesheet" href="/css/styles.css">
     
     <title>Croissant photo/croissant.com</title>
+           <meta name="description" content="A photo of a delicious soft golden brown croissant baked to perfection">
 </head>
 <body>
-    <H1>🥐 A picture of a croissant</H1>
+    <H1>🥐 A picture of a delicious croissant- croissant.com</H1>
 <img src="/images/croissant.jpg" alt="Homemade croissant" class="croissant-photo">
 
            <footer>
