--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
        to order croissant pastries">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
-   <title>Contact Croissant.com</title>
+   <title>Contact us - Croissant.com</title>
+          <meta name="description" content="Contact croissant.com to learn more about our homemade croissants">
 </head>
 <body>
     <h1>🥐 Contact us</h1>
